--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="netbanking_example">Netbanking Confirmation Example</string>
     <string name="manual_us_bank_account_example">"Manual US Bank Account Example"</string>
     <string name="cash_app_pay_example">Cash App Pay</string>
+    <string name="amazon_pay_example">Amazon Pay</string>
     <string name="revolut_pay_example">Revolut Pay</string>
     <string name="swish_example">Swish</string>
     <string name="mobilepay_example">MobilePay</string>
