--- a/financial-connections/res/values/strings.xml
+++ b/financial-connections/res/values/strings.xml
@@ -140,7 +140,7 @@
     <string name="stripe_exit_modal_desc_no_business">Your bank account won’t be connected to this business and all progress will be lost.</string>
     <string name="stripe_close_dialog_networking_desc">If you cancel now, your account will be linked to %1$s but it will not be saved to Link.</string>
     <string name="stripe_close_dialog_networking_desc_no_business">If you cancel now, your account will be linked to this business but it will not be saved to Link.</string>
-    <string name="stripe_exit_modal_cta_accept">Yes</string>
+    <string name="stripe_exit_modal_cta_accept">Yes, exit</string>
     <string name="stripe_exit_modal_cta_cancel">Cancel</string>
     <string name="stripe_prepane_cancel_cta">Cancel</string>
     <string name="stripe_networking_signup_email_label">Email address</string>
