Support for Klarna with SI&PIwSFU. (#8132)

--- a/payments-ui-core/res/values/strings.xml
+++ b/payments-ui-core/res/values/strings.xml
@@ -51,6 +51,8 @@
   <string name="stripe_invalid_upi_id">Invalid UPI ID</string>
   <!-- Klarna buy now or pay later copy -->
   <string name="stripe_klarna_buy_now_pay_later">Buy now or pay later with Klarna.</string>
+  <!-- Klarna mandate text -->
+  <string name="stripe_klarna_mandate">By continuing to Klarna, you allow %1$s to charge your Klarna account for future payments in accordance with their terms and Klarna\'s terms. You can change this at any time in your Klarna app or by reaching out to %2$s.</string>
   <!-- Klarna pay later copy -->
   <string name="stripe_klarna_pay_later">Pay later with Klarna.</string>
   <!-- Caption for Phone field on address form -->
