Add a missing dot in success messages

--- a/financial-connections/res/values/strings.xml
+++ b/financial-connections/res/values/strings.xml
@@ -51,16 +51,16 @@
     <string name="stripe_success_pane_desc_microdeposits">You can expect micro-deposits to account ••••%1$s in 1–2 days and an email with further instructions.</string>
     <string name="stripe_success_pane_desc_microdeposits_no_account">You can expect micro-deposits to your account in 1–2 days and an email with further instructions.</string>
     <plurals name="stripe_success_pane_desc">
-        <item quantity="one">Your account was connected</item>
-        <item quantity="other">Your accounts were connected</item>
+        <item quantity="one">Your account was connected.</item>
+        <item quantity="other">Your accounts were connected.</item>
     </plurals>
     <plurals name="stripe_success_pane_desc_link_success">
-        <item quantity="one">Your account was connected and saved with Link</item>
-        <item quantity="other">Your accounts were connected and saved with Link</item>
+        <item quantity="one">Your account was connected and saved with Link.</item>
+        <item quantity="other">Your accounts were connected and saved with Link.</item>
     </plurals>
     <plurals name="stripe_success_pane_desc_link_error">
-        <item quantity="one">Your account was connected <annotation bold="bold">but couldn\'t be saved with Link</annotation></item>
-        <item quantity="other">Your accounts were connected <annotation bold="bold">but couldn\'t be saved with Link</annotation></item>
+        <item quantity="one">Your account was connected <annotation bold="bold">but couldn\'t be saved with Link</annotation>.</item>
+        <item quantity="other">Your accounts were connected <annotation bold="bold">but couldn\'t be saved with Link</annotation>.</item>
     </plurals>
     <string name="stripe_success_pane_done">Done</string>
     <string name="stripe_success_pane_done_with_merchant">Back to %1$s</string>
