--- a/identity/res/values/strings.xml
+++ b/identity/res/values/strings.xml
@@ -39,6 +39,7 @@
   <string name="stripe_could_not_capture_title">Could not capture image</string>
   <!-- Instructional text when environment is too bright -->
   <string name="stripe_decrease_lighting">Details not visible</string>
+  <string name="stripe_decrease_lighting_2">Move to a darker area</string>
   <!-- Content description for camera icon -->
   <string name="stripe_description_camera">camera icon</string>
   <!-- Description of the clock icon, used for A11Y -->
@@ -171,6 +172,7 @@
   <string name="stripe_reduce_blur">ID not in focus</string>
   <!-- Instructional text when the document has too much glare -->
   <string name="stripe_reduce_glare">Details not visible</string>
+  <string name="stripe_reduce_glare_2">Try reduce glare and make ID visible</string>
   <!-- Button text displayed to the user to retake photo -->
   <string name="stripe_retake_photos">Retake Photos</string>
   <!-- Instructional text when user needs to rotate the document to align with camera -->
