--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="cash_app_pay_example">Cash App Pay</string>
     <string name="amazon_pay_example">Amazon Pay</string>
     <string name="revolut_pay_example">Revolut Pay</string>
+    <string name="alma_example">Alma</string>
     <string name="swish_example">Swish</string>
     <string name="mobilepay_example">MobilePay</string>
     <string name="card_brands">Card Brands</string>
