--- a/paymentsheet/res/values-vi/strings.xml
+++ b/paymentsheet/res/values-vi/strings.xml
@@ -41,6 +41,8 @@
   <string name="stripe_paymentsheet_close">Đóng</string>
   <!-- A button used to confirm selecting a saved payment method -->
   <string name="stripe_paymentsheet_confirm">Xác nhận</string>
+  <!-- Title for prompting for a card's CVC on confirming the payment -->
+  <string name="stripe_paymentsheet_confirm_your_cvc">Xác nhận CVC của bạn</string>
   <!-- Text for a button that allows manual entry of an address -->
   <string name="stripe_paymentsheet_enter_address_manually">Nhập địa chỉ thủ công</string>
   <!-- Title shown above a carousel containing the customer's payment methods -->
