Add Multibanco Example to Example app

--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -153,4 +153,5 @@
     <string name="confirm_with_us_bank_account">Confirm with Bank Account</string>
     <string name="setup_us_bank_account">Setup Bank Account</string>
     <string name="confirm_with_us_bank_account_intro">Click below to create payment intent and attach a bank account to payment method. Once a payment intent is created you will be redirected to enter your bank details.</string>
+    <string name="multibanco_example">Multibanco Example</string>
 </resources>
