Update strings comment

--- a/payments-core/res/values/strings.xml
+++ b/payments-core/res/values/strings.xml
@@ -169,8 +169,8 @@
   <!-- Screen title telling users they should select a shipping address -->
   <string name="stripe_title_select_shipping_method">Select Shipping Method</string>
   <!-- Title of screen to update a card -->
-  <string name="stripe_title_update_card">Update card brand</string>
-  <!-- Text for update card brand button -->
+  <string name="stripe_title_update_card">Update card</string>
+  <!-- Title for a button that when tapped, updates a card brand. -->
   <string name="stripe_update">Update</string>
   <!-- When there are multiple browsers and web authentication is required, this will show in a window asking which browser they want to use to "Verify your payment" -->
   <string name="stripe_verify_your_payment">Verify your payment</string>
