Update consent checkbox text

--- a/payments-ui-core/res/values-da/strings.xml
+++ b/payments-ui-core/res/values-da/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Ved at bekræfte din betaling med PayPal, tillader du %s at debitere din PayPal-konto for fremtidige betalinger i overensstemmelse med deres vilkår.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Ved at bekræfte din betaling med RevolutPay, tillader du %s at debitere din RevolutPay-konto for fremtidige betalinger i overensstemmelse med deres vilkår.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Gem til fremtidige %s-betalinger</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Gem betalingsoplysninger for %s til senere køb</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Scan kort</string>
   <!-- SEPA mandate text -->
