--- a/payments-ui-core/res/values-ca-rES/strings.xml
+++ b/payments-ui-core/res/values-ca-rES/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Si confirmeu el pagament a PayPal, permeteu que %s faci càrrecs al vostre compte de PayPal per a pagaments en el futur d\'acord amb les seves condicions.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Si confirmeu el pagament amb RevolutPay, permeteu que %s faci càrrecs al vostre compte de RevolutPay per a pagaments en el futur d\'acord amb les seves condicions.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Desar per a futurs pagaments de %s</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Desa les dades de pagament a %s per a compres futures</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Escanejar targeta</string>
   <!-- SEPA mandate text -->
