--- a/payments-ui-core/res/values-cs-rCZ/strings.xml
+++ b/payments-ui-core/res/values-cs-rCZ/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Potvrzením platby prostřednictvím služby PayPal povolujete, aby společnost %s účtovala z vašeho účtu PayPal budoucí platby v souladu s jejich podmínkami.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Potvrzením platby prostřednictvím služby RevolutPay povolujete společnosti %s, aby v souladu se svými podmínkami stahovala peníze z vašeho účtu RevolutPay pro budoucí platby.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Uložit pro budoucí platby %s</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Uložit platební údaje do  %s  pro budoucí nákupy</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Naskenovat kartu</string>
   <!-- SEPA mandate text -->
