--- a/payments-ui-core/res/values-fil/strings.xml
+++ b/payments-ui-core/res/values-fil/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Sa pagkumpirma sa iyong pagbabayad sa PayPal, pinapayagan mo ang %s na singilin ang iyong PayPal account para sa mga pagbabayad sa hinaharap alinsunod sa kanilang mga tuntunin.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Sa pagkumpirma sa iyong pagbabayad sa RevolutPay, pinapayagan mo ang %s na singilin ang iyong RevolutPay account para sa mga pagbabayad sa hinaharap alinsunod sa kanilang mga tuntunin.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">I-save para sa mga pagbabayad sa %s sa hinaharap</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">I-save ang mga detalye ng pababayad sa %s para sa mga pagbili sa hinaharap</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">I-scan ang kard</string>
   <!-- SEPA mandate text -->
