--- a/payments-ui-core/res/values-ko/strings.xml
+++ b/payments-ui-core/res/values-ko/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">PayPal 결제를 확인하면 %s에서 해당 회사의 약관에 따라 향후 결제에 대해 PayPal 계정에 대금을 청구하도록 허용하는 것입니다.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">RevolutPay 결제를 확인하면 %s에서 해당 회사의 약관에 따라 향후 결제에 대해 RevolutPay 계정에 대금을 청구하도록 허용하는 것입니다.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">향후 %s 결제에 사용하도록 저장</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">향후 구매를 위해 결제 세부사항 %s에 저장</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">카드 스캔</string>
   <!-- SEPA mandate text -->
