--- a/payments-ui-core/res/values-lt-rLT/strings.xml
+++ b/payments-ui-core/res/values-lt-rLT/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Patvirtindami savo mokėjimą „PayPal“ leidžiate „%s“ nuskaityti mokestį nuo jūsų „PayPal“ sąskaitos vėlesniems mokėjimams pagal jų sąlygas.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Patvirtindami savo mokėjimą „RevolutPay“ leidžiate %s nuskaityti mokestį nuo jūsų „RevolutPay“ sąskaitos vėlesniems mokėjimams pagal jų sąlygas.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Išsaugoti vėlesniems %s mokėjimams</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Išsaugoti mokėjimo duomenis „%s” būsimiems pirkimams</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Nuskaityti kortelę</string>
   <!-- SEPA mandate text -->
