--- a/payments-ui-core/res/values-nb/strings.xml
+++ b/payments-ui-core/res/values-nb/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Ved å bekrefte betalingen med PayPal, tillater du %s å belaste PayPal for fremtidige betalinger i samsvar med vilkårene deres.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Ved å bekrefte betalingen din med RevolutPay, lar du %s belaste RevolutPay-kontoen din for fremtidige betalinger i samsvar med deres vilkår.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Lagre til fremtidige betalinger til %s</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Lagre betalingsinformasjonen hos %s for fremtidige kjøp</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Skann kort</string>
   <!-- SEPA mandate text -->
