--- a/payments-ui-core/res/values-pt-rBR/strings.xml
+++ b/payments-ui-core/res/values-pt-rBR/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Ao confirmar seu pagamento com o PayPal, você permite que %s cobre sua conta do PayPal por pagamentos futuros em conformidade com os termos definidos pela empresa.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Ao confirmar seu pagamento com o RevolutPay, você permite que %s cobre sua conta do RevolutPay por pagamentos futuros em conformidade com os termos da empresa.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Salvar para pagamentos futuros a %s</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Salvar dados de pagamento para compras futuras em %s</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Ler cartão</string>
   <!-- SEPA mandate text -->
