--- a/payments-ui-core/res/values-pt-rPT/strings.xml
+++ b/payments-ui-core/res/values-pt-rPT/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Ao confirmar o seu pagamento com o PayPal, autoriza %s a cobrar pagamentos futuros à sua conta PayPal de acordo com as respetivas condições.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Ao confirmar o seu pagamento com o RevolutPay, autoriza %s a cobrar pagamentos futuros à sua conta RevolutPay de acordo com as respetivas condições.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Guardar para pagamentos %s futuros</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Guardar detalhes de pagamento em %s para futuras compras</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Ler cartão</string>
   <!-- SEPA mandate text -->
