--- a/payments-ui-core/res/values-ro-rRO/strings.xml
+++ b/payments-ui-core/res/values-ro-rRO/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Prin confirmarea plății cu PayPal, permiteți %s să vă taxeze contul PayPal pentru plățile viitoare în conformitate cu termenii acesteia.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Prin confirmarea plății cu RevolutPay, permiteți %s să vă taxeze contul RevolutPay pentru plățile viitoare în conformitate cu termenii acesteia.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Salvați pentru plăți viitoare %s</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Salvați detaliile de plată pe %s pentru achiziții viitoare</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Scanare card</string>
   <!-- SEPA mandate text -->
