--- a/payments-ui-core/res/values-th/strings.xml
+++ b/payments-ui-core/res/values-th/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">การยืนยันการการชำระเงินด้วย PayPal หมายความว่าคุณอนุญาตให้ %s เรียกเก็บเงินจากบัญชี PayPal ของคุณสำหรับการชำระเงินในอนาคตตามเงื่อนไขของผู้ค้ารายดังกล่าว</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">การยืนยันการการชำระเงินด้วย RevolutPay หมายความว่าคุณอนุญาตให้ %s เรียกเก็บเงินจากบัญชี RevolutPay ของคุณสำหรับการชำระเงินในอนาคตตามเงื่อนไขของผู้ค้ารายดังกล่าว</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">บันทึกไว้เพื่อชำระเงินด้วย %s ในอนาคต</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">บันทึกรายละเอียดการชำระเงินไปยัง %s เพื่อการซื้อในอนาคต</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">สแกนบัตร</string>
   <!-- SEPA mandate text -->
