--- a/payments-ui-core/res/values-tr/strings.xml
+++ b/payments-ui-core/res/values-tr/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">PayPal\'la ödemeyi onayladığınızda, %s şirketine gelecekteki ödemeler için kendi koşullarına uygun olarak PayPal hesabınızı ücretlendirme izni vermiş olursunuz.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">RevolutPay ile ödemenizi doğrulayarak, %s tarafından RevolutPay hesabınızdan, kendi koşulları doğrultusunda gelecekteki ödemelerinizin tahsil edilmesine izin vermektesiniz.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Gelecekteki %s ödemeleri için kaydedilsin</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Ödeme bilgilerini gelecekteki satın almalar için %s işletmesine kaydet</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Kartı tara</string>
   <!-- SEPA mandate text -->
