--- a/payments-ui-core/res/values-vi/strings.xml
+++ b/payments-ui-core/res/values-vi/strings.xml
@@ -89,8 +89,8 @@
   <string name="stripe_paypal_mandate">Bằng cách xác nhận thanh toán của quý vị với PayPal, quý vị cho phép %s tính phí tài khoản PayPal của quý vị cho các khoản thanh toán trong tương lai theo các điều khoản của họ.</string>
   <!-- Revolut mandate text -->
   <string name="stripe_revolut_mandate">Khi xác nhận khoản thanh toán với RevolutPay, bạn cho phép %s tính phí vào tài khoản RevolutPay của bạn cho các khoản thanh toán trong tương lai căn cứ theo các điều khoản của họ.</string>
-  <!-- Next to the save payment method users will see the merchant name: "Save for future Example.inc Payments" -->
-  <string name="stripe_save_for_future_payments_with_merchant_name">Lưu để thanh toán %s sau này</string>
+  <!-- The label of a switch indicating whether to save the user's payment details for future payment -->
+  <string name="stripe_save_payment_details_to_merchant_name">Lưu thông tin thanh toán vào %s để mua hàng trong tương lai</string>
   <!-- Button title to open camera to scan credit/debit card -->
   <string name="stripe_scan_card">Quét thẻ</string>
   <!-- SEPA mandate text -->
