--- a/paymentsheet/res/values-cs-rCZ/strings.xml
+++ b/paymentsheet/res/values-cs-rCZ/strings.xml
@@ -83,6 +83,8 @@
   <string name="stripe_paymentsheet_remove_bank_account_title">Odebrat bankovní účet</string>
   <!-- Title for a button that when tapped removes a saved card. -->
   <string name="stripe_paymentsheet_remove_card">Odebrat kartu</string>
+  <!-- Title for confirmation alert to remove a card -->
+  <string name="stripe_paymentsheet_remove_card_title">Odebrat kartu?</string>
   <!-- Content for alert popup prompting to confirm removing saved payment method. -->
   <string name="stripe_paymentsheet_remove_pm">Odebrat %s</string>
   <!-- Title shown above a view containing a customer's payment method that they can delete -->
