--- a/paymentsheet/res/values-ja/strings.xml
+++ b/paymentsheet/res/values-ja/strings.xml
@@ -83,6 +83,8 @@
   <string name="stripe_paymentsheet_remove_bank_account_title">銀行口座を削除</string>
   <!-- Title for a button that when tapped removes a saved card. -->
   <string name="stripe_paymentsheet_remove_card">カードを削除</string>
+  <!-- Title for confirmation alert to remove a card -->
+  <string name="stripe_paymentsheet_remove_card_title">カードを削除しますか？</string>
   <!-- Content for alert popup prompting to confirm removing saved payment method. -->
   <string name="stripe_paymentsheet_remove_pm">%s を削除</string>
   <!-- Title shown above a view containing a customer's payment method that they can delete -->
