--- a/paymentsheet/res/values-tr/strings.xml
+++ b/paymentsheet/res/values-tr/strings.xml
@@ -83,6 +83,8 @@
   <string name="stripe_paymentsheet_remove_bank_account_title">Banka hesabını kaldır</string>
   <!-- Title for a button that when tapped removes a saved card. -->
   <string name="stripe_paymentsheet_remove_card">Kartı kaldır</string>
+  <!-- Title for confirmation alert to remove a card -->
+  <string name="stripe_paymentsheet_remove_card_title">Kart kaldırılsın mı?</string>
   <!-- Content for alert popup prompting to confirm removing saved payment method. -->
   <string name="stripe_paymentsheet_remove_pm">%s yöntemini kaldırın</string>
   <!-- Title shown above a view containing a customer's payment method that they can delete -->
